@@ -30,6 +30,10 @@
        pointed to by /logmsgfile:<path>. (Stefan)
 - NEW: The cache automatically closes all open handles for drives the user
        wants to remove. See issue #188. (Stefan)
+- NEW: Revert, Add, Resolve and Create Patch dialog can be refreshed by
+       pressing F5. See issue #191. (Stefan)
+- NEW: Ignoring of multiple items at once in the Status List Control.
+       See issue #189. (Stefan)
 - CHG: The date filter in the log dialog now prevents the user from selecting
        dates outside the shown log messages. (Michael Dietschi)
 - CHG: Warn if user selects files inside an added folder to create a patch.
